--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
+	<classpathentry kind="lib" path="F:/CarlosSaraiva-Almoxarifado-ac22300/driver/ojdbc14.jar"/>
+	<classpathentry kind="lib" path="F:/CarlosSaraiva-Almoxarifado-ac22300/driver/ojdbc14_g.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
